Project landing page

--- a/index-en.html
+++ b/index-en.html
@@ -22,11 +22,11 @@
               <i class="world icon"></i>
               <div class="text">Language</div>
               <div class="menu">
-                <a class="item active" href="index.html">
+                <a class="item" href="index.html">
                   <i class="pl flag"></i> Polish
                   <span class="description">Polski</span>
                 </a>
-                <a class="item" href="index-en.html">
+                <a class="item active" href="index-en.html">
                   <i class="gb flag"></i> English
                   <span class="description">English</span></a>
               </div>
@@ -39,9 +39,9 @@
         <h1 class="ui inverted header">
           Fokus
         </h1>
-        <h2>Strona projektu grupowego</h2>
+        <h2>Group project page</h2>
         <a href="https://github.com/fokus-team/fokus" class="ui huge yellow button">
-          Zobacz na GitHub <i class="right github icon"></i>
+          See on GitHub <i class="right github icon"></i>
         </a>
       </div>
     </div>
@@ -49,16 +49,17 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="wide column">
-            <h3 class="ui header">O projekcie</h3>
-            <p>Celem projektu jest stworzenie aplikacji umożliwiającej planowanie i wykonywanie zadań. Będzie ona przeznaczona głównie do komunikacji pomiędzy rodzicem a dzieckiem czy opiekunem a podopiecznym. Umożliwi ona dziecku planowanie zadań we współpracy z opiekunem, oznaczanie ich wykonania i śledzenie postępów.</p>
-            <p>Projekt będzie realizowany we współpracy z Centrum Terapii ADHD w Gdańsku.</p>
+            <h3 class="ui header">About project</h3>
+            <p>The goal of the project is to create application which enables planning and accomplishment of tasks. App is intended for communication between parent and a child or therapist and mentee. Main features are task scheduling in cooperation with a parent, marking task completion and progress tracking.</p>
+            <p>Project is conducted in cooperation with ADHD Therapy Center in Gdańsk.</p>
           </div>
         </div>
       </div>
     </div>
     <div class="ui vertical stripe segment">
       <div class="ui middle aligned stackable grid container">
-        <h3 class="ui header">Poznaj nasz zespół</h3>
+        <h3 class="ui header">Meet our teem
+        </h3>
         <div class="row centered">
           <div class="ui centered four stackable cards link">
             <div class="fluid card">
@@ -105,17 +106,17 @@
       <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
           <div class="three wide column">
-            <h4 class="ui inverted header">Linki</h4>
+            <h4 class="ui inverted header">Links</h4>
             <div class="ui inverted link list">
-              <a href="#" class="item">Strona projektu</a>
-              <a href="https://eti.pg.edu.pl/" class="item">Strona uczelni</a>
-              <a href="https://github.com/fokus-team/fokus" class="item">Projekt na Github</a>
+              <a href="#" class="item">Project page</a>
+              <a href="https://eti.pg.edu.pl/" class="item">University page</a>
+              <a href="https://github.com/fokus-team/fokus" class="item">Github repository</a>
             </div>
           </div>
           <div class="six wide column">
-            <h4 class="ui inverted header">Kontakt</h4>
-            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:stasgora@gmail.com">stasgora@gmail.com</a>.</p>
-            <p>Problemy ze stroną internetową można zgłosić pod adres <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
+            <h4 class="ui inverted header">Contact</h4>
+            <p>In case of any questions regarding project please contact  <a href="mailto:stasgora@gmail.com">stasgora@gmail.com</a>.</p>
+            <p>Issues with project website can be reported at  <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
       </div>
