Jan's profile picture

--- a/index-en.html
+++ b/index-en.html
@@ -91,7 +91,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="assets/team/user.png">
+                <img src="assets/team/jan.png">
               </div>
               <div class="content">
                 <div class="header">Jan Czubiak</div>
