Logo animation added, color correction, Jan's picture fixed

--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
         </div>
       </div>
       <div class="ui text container">
-        <img src="assets/sunflower.png" class="logo-image" />
-        <h1 class="ui inverted header">
-          Fokus
-        </h1>
+        <div id="sunflower"></div>
         <h2>Strona projektu grupowego</h2>
-        <a href="https://github.com/fokus-team/fokus" class="ui huge yellow button">
+        <a href="https://github.com/fokus-team/fokus" class="ui huge teal button">
           Zobacz na GitHub <i class="right github icon"></i>
         </a>
       </div>
@@ -90,7 +87,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="assets/team/user.png">
+                <img src="assets/team/jan.png">
               </div>
               <div class="content">
                 <div class="header">Jan Czubiak</div>
@@ -121,6 +118,7 @@
       </div>
     </div>
   </div>
+  <script src="assets/lottie.js"></script>
   <script src="assets/main.js"></script>
 </body>
 </html>
