--- a/index-en.html
+++ b/index-en.html
@@ -35,12 +35,9 @@
         </div>
       </div>
       <div class="ui text container">
-        <img src="assets/sunflower.png" class="logo-image" />
-        <h1 class="ui inverted header">
-          Fokus
-        </h1>
+        <div id="sunflower"></div>
         <h2>Group project page</h2>
-        <a href="https://github.com/fokus-team/fokus" class="ui huge yellow button">
+        <a href="https://github.com/fokus-team/fokus" class="ui huge teal button">
           See on GitHub <i class="right github icon"></i>
         </a>
       </div>
@@ -122,6 +119,7 @@
       </div>
     </div>
   </div>
+  <script src="assets/lottie.js"></script>
   <script src="assets/main.js"></script>
 </body>
 </html>
