Description & info update

--- a/index-en.html
+++ b/index-en.html
@@ -47,8 +47,8 @@
         <div class="row">
           <div class="wide column">
             <h3 class="ui header">About project</h3>
-            <p>The goal of the project is to create application which enables planning and accomplishment of tasks. App is intended for communication between parent and a child or therapist and mentee. Main features are task scheduling in cooperation with a parent, marking task completion and progress tracking.</p>
-            <p>Project is conducted in cooperation with ADHD Therapy Center in Gdańsk.</p>
+            <p>Fokus is a mobile application that helps kids complete their daily tasks under parental control. Main features include task scheduling and progress tracking as well as awarding badges and points.</p>
+            <p>Application is being created as part of a team project at Gdansk University of Technology.</p>
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
               </div>
               <div class="content">
                 <div class="header">Jan Czubiak</div>
-                <div class="meta">Developer</div>
+                <div class="meta">Tester</div>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Contact</h4>
-            <p>In case of any questions regarding project please contact  <a href="mailto:stasgora@gmail.com">stasgora@gmail.com</a>.</p>
+            <p>In case of any questions regarding project please contact  <a href="mailto:stasgora@gmail.com">contact@sgora.dev</a>.</p>
             <p>Issues with project website can be reported at  <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
