--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="row">
           <div class="wide column">
             <h3 class="ui header">O projekcie</h3>
-            <p>Celem projektu jest stworzenie aplikacji umożliwiającej planowanie i wykonywanie zadań. Będzie ona przeznaczona głównie do komunikacji pomiędzy rodzicem a dzieckiem czy opiekunem a podopiecznym. Umożliwi ona dziecku planowanie zadań we współpracy z opiekunem, oznaczanie ich wykonania i śledzenie postępów.</p>
-            <p>Projekt będzie realizowany we współpracy z Centrum Terapii ADHD w Gdańsku.</p>
+            <p>Fokus to aplikacja mobilna pomagająca dzieciom wykonywać codzienne zadania pod kontrolą opiekuna. Główne funkcje obejmują planowanie zadań i śledzenie postępów a także przyznawanie punktów i odznak.</p>
+            <p>Aplikacja powstaje w ramach projektu zespołowego na Politechnice Gdańskiej.</p>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
               </div>
               <div class="content">
                 <div class="header">Jan Czubiak</div>
-                <div class="meta">Developer</div>
+                <div class="meta">Tester</div>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Kontakt</h4>
-            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:stasgora@gmail.com">stasgora@gmail.com</a>.</p>
+            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:stasgora@gmail.com">contact@sgora.dev</a>.</p>
             <p>Problemy ze stroną internetową można zgłosić pod adres <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
