--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         <a href="https://github.com/fokus-team/fokus" class="ui huge teal button">
           Zobacz na GitHub <i class="right github icon"></i>
         </a>
+        <p style="margin-top: 1em;">
+          <a href="terms_of_use.html" class="ui primary button">
+            Warunki korzystania
+          </a>
+          <a href="privacy_policy.html" class="ui primary button">
+            Polityka prywatności
+          </a>
+        </p>
+        <br/><br/><br/>
       </div>
     </div>
     <div class="ui vertical stripe segment">
@@ -49,6 +58,31 @@
             <h3 class="ui header">O projekcie</h3>
             <p>Fokus to aplikacja mobilna pomagająca dzieciom wykonywać codzienne zadania pod kontrolą opiekuna. Główne funkcje obejmują planowanie zadań i śledzenie postępów a także przyznawanie punktów i odznak.</p>
             <p>Aplikacja powstaje w ramach projektu zespołowego na Politechnice Gdańskiej.</p>
+          </div>
+        </div>
+      </div>
+      <br/><br/><br/>
+      <div class="ui middle aligned stackable container">
+        <div class="ui four column grid stackable">
+          <div class="column">
+            <div class="ui segment">
+              <img width="100%" src="assets/screenshots/96503289-53a77100-1253-11eb-8898-c6de14877d17.png">
+            </div>
+          </div>
+          <div class="column">
+            <div class="ui segment">
+              <img width="100%"  src="assets/screenshots/96503298-55713480-1253-11eb-80f4-2024db27c1d0.png">
+            </div>
+          </div>
+          <div class="column">
+            <div class="ui segment">
+              <img width="100%"  src="assets/screenshots/96503301-5609cb00-1253-11eb-80c5-de61069351ba.png">
+            </div>
+          </div>
+          <div class="column">
+            <div class="ui segment">
+              <img width="100%"  src="assets/screenshots/96503303-56a26180-1253-11eb-938c-931384b899c9.png">
+            </div>
           </div>
         </div>
       </div>
@@ -111,7 +145,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Kontakt</h4>
-            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:stasgora@gmail.com">contact@sgora.dev</a>.</p>
+            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:stasgora@gmail.com">fokus.apps@gmail.com</a>.</p>
             <p>Problemy ze stroną internetową można zgłosić pod adres <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
