--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -101,7 +101,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Contact</h4>
-            <p>In case of any questions regarding project please contact  <a href="mailto:stasgora@gmail.com">fokus.apps@gmail.com</a>.</p>
+            <p>In case of any questions regarding project please contact  <a href="mailto:fokus.apps@gmail.com">fokus.apps@gmail.com</a>.</p>
             <p>Issues with project website can be reported at  <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
