--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui inverted vertical masthead gradient center aligned segment">
       <div class="ui topbar container">
         <div class="ui large secondary inverted pointing menu">
           <div class="right item">
@@ -40,7 +40,7 @@
         <a href="https://github.com/fokus-team/fokus" class="ui huge teal button">
           Zobacz na GitHub <i class="right github icon"></i>
         </a>
-        <p style="margin-top: 1em;">
+        <p>
           <a href="terms_of_use.html" class="ui primary button">
             Warunki korzystania
           </a>
@@ -48,7 +48,6 @@
             Polityka prywatności
           </a>
         </p>
-        <br/><br/><br/>
       </div>
     </div>
     <div class="ui vertical stripe segment">
