--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -15,37 +15,15 @@
 <body>
   <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
-      <div class="ui topbar container">
-        <div class="ui large secondary inverted pointing menu">
-          <div class="right item">
-            <div class="ui floating dropdown link">
-              <i class="world icon"></i>
-              <div class="text">Language</div>
-              <div class="menu">
-                <a class="item active" href="index.html">
-                  <i class="pl flag"></i> Polish
-                  <span class="description">Polski</span>
-                </a>
-                <a class="item" href="index-en.html">
-                  <i class="gb flag"></i> English
-                  <span class="description">English</span></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="ui topbar container"></div>
       <div class="ui text container">
         <div id="sunflower"></div>
-        <h2>Group project page</h2>
-        <a href="https://github.com/fokus-team/fokus" class="ui huge teal button">
-          See on GitHub <i class="right github icon"></i>
-        </a>
+        <h2>Terms of Use</h2>
         <p style="margin-top: 1em;">
-          <a href="index.html" class="ui primary button">
+          <a href="index.html" class="ui grey button">
             <i class="arrow left icon"></i> Homepage
           </a>
         </p>
-        <br/><br/><br/>
       </div>
     </div>
     <div class="ui vertical stripe segment">
