--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -32,8 +32,11 @@
           <div class="wide column">
             <h1 class="ui header">Privacy Policy</h1>
             <h2 class="ui medium header">Definitions:</h2>
-            <p>Fokus mobile application, hereinafter referred to as “app”, “application” and “service” Creators of Fokus application: Stanisław Góra, Mikołaj Mirko, Mateusz Janicki, hereinafter referred to as “we” and “us”, User of the Fokus application, hereinafter referred to as “you”,
-            </p>
+            <div class="ui bulleted list">
+              <div class="item">Fokus mobile application, hereinafter referred to as “app”, “application” and “service”</div>
+              <div class="item">Creators of Fokus application: Stanisław Góra, Mikołaj Mirko, Mateusz Janicki, hereinafter referred to as “we” and “us”</div>
+              <div class="item">User of the Fokus application, hereinafter referred to as “you”</div>
+            </div>
             <p>This service is provided at no cost and is intended for use as is.
             </p>
             <p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
