--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -32,8 +32,11 @@
           <div class="wide column">
             <h1 class="ui header">Terms of Use</h1>
             <h2 class="ui medium header">Definitions:</h2>
-            <p>Fokus mobile application, hereinafter referred to as “app” and “application” Creators of Fokus application: Stanisław Góra, Mikołaj Mirko, Mateusz Janicki, hereinafter referred to as “we” and “us”, User of the Fokus application, hereinafter referred to as “you”,
-            </p>
+            <div class="ui bulleted list">
+              <div class="item">Fokus mobile application, hereinafter referred to as “app”, “application” and “service”</div>
+              <div class="item">Creators of Fokus application: Stanisław Góra, Mikołaj Mirko, Mateusz Janicki, hereinafter referred to as “we” and “us”</div>
+              <div class="item">User of the Fokus application, hereinafter referred to as “you”</div>
+            </div>
             <p>By downloading or using this app, these terms will automatically apply to you – you should therefore make sure that you read them carefully before using the app. You’re not allowed to copy or modify the app in any way or create/distribute derivative versions. You’re not allowed to extract the source code of the app or any files/data included in the application package file. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to us.
             </p>
             <p>We are committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
