Update contact email

--- a/index-en.html
+++ b/index-en.html
@@ -145,7 +145,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Contact</h4>
-            <p>In case of any questions regarding project please contact  <a href="mailto:fokus.apps@gmail.com">fokus.apps@gmail.com</a>.</p>
+            <p>In case of any questions regarding project please contact  <a href="mailto:contact@fokus.link">contact@fokus.link</a>.</p>
             <p>Issues with project website can be reported at  <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
