--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Kontakt</h4>
-            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:fokus.apps@gmail.com">fokus.apps@gmail.com</a>.</p>
+            <p>W razie pytań odnośnie projektu prosimy o kontakt pod adresem mailowym <a href="mailto:contact@fokus.link">contact@fokus.link</a>.</p>
             <p>Problemy ze stroną internetową można zgłosić pod adres <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
