--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -63,7 +63,7 @@
             <p>These terms and conditions are effective as of 07-01-2021.
             </p>
             <h2 class="ui medium header">Contact Us:</h2>
-            <p>If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at fokus.apps@gmail.com.
+            <p>If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at contact@fokus.link.
             </p>
           </div>
         </div>
@@ -82,7 +82,7 @@
           </div>
           <div class="six wide column">
             <h4 class="ui inverted header">Contact</h4>
-            <p>In case of any questions regarding project please contact  <a href="mailto:fokus.apps@gmail.com">fokus.apps@gmail.com</a>.</p>
+            <p>In case of any questions regarding project please contact  <a href="mailto:contact@fokus.link">contact@fokus.link</a>.</p>
             <p>Issues with project website can be reported at  <a href="mailto:mikolajmirko@gmail.com">mikolajmirko@gmail.com</a>.</p>
           </div>
         </div>
